--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -73,7 +73,7 @@ nav {
 <body>
 
 <nav class='blue'>
-<h1 class='title c-white'>Book Dashboard</h1>
+<h1 class='title c-white'>BuchDashboard</h1>
 
 <!-- Add Book Button -->
 <a href="{{ url_for('add_book') }}">
