scrape all -> refresh all

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -81,7 +81,7 @@ nav {
 </a>
 
 <form action="{{ url_for('scrape_all_prices_route') }}" method="POST">
-    <button class='btn yellow' type="submit">Scrape All Prices</button>
+    <button class='btn yellow' type="submit">Refresh All</button>
 </form>
 </nav>
 
