--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,8 @@
 	<title>Books</title>
 <style>
 h1.title {
-	margin: .4rem auto 0 1rem;
+	margin: .4rem auto 0 1.5rem;
+	font-size: 2.3rem;
 }
 
 nav {
@@ -15,6 +16,9 @@ nav {
 	.btn {
 		margin-right: 1rem;
 	}
+	position: fixed;
+	width: 100vw;
+	border-bottom: 5px solid black;
 }
 
 .btn, .btn:hover {
@@ -24,10 +28,10 @@ nav {
 
 .books {
 	display: grid;
-	grid-template-columns: repeat(auto-fill, 30rem);
-	grid-row-gap: 3rem;
-	grid-column-gap: 1rem;
-	padding: 3rem;
+	grid-template-columns: repeat(auto-fit, minmax(30rem,max-content));
+	grid-gap: 1rem;
+	padding: 1rem;
+	padding-top: 8rem;
 }
 
 .book {
@@ -48,17 +52,21 @@ nav {
 		margin-top: auto;
 		opacity: 0;
 		pointer-events: click-through;
+		padding: 1rem;
 	}
 	ul {
 		list-style: none inside;
-		padding: 0;
+		padding: 0 1rem;
 		li a {
-			font-size: 1.5rem;
+			font-size: 1.75rem;
 			text-decoration: none;
 			&:hover {
 				text-decoration: underline;
 				cursor: hover;
 			}
+		}
+		li:nth-child(1) {
+			color: var(--yellow);
 		}
 	}
 }
@@ -67,6 +75,18 @@ nav {
 		opacity: 1;
 		pointer-events: auto;
 	}
+}
+.book-top {
+	padding: 1rem;
+	display: flex;
+	flex-direction: column;
+		  * {
+			  text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+		  }
+	border-top-right-radius: 5px;
+	border-top-left-radius: 5px;
 }
 </style>
 </head>
@@ -87,8 +107,10 @@ nav {
 
 <div class='books'>
     {% for book in books %}
-    <div class='book'>
-        <strong class='title book-title'>{{ book.title }}</strong><span class='subtitle secondary isbn'>(ISBN: {{ book.isbn }})</span>
+    <div class='book border blue c-white'>
+	    <div class="book-top black">
+		<strong class='title book-title'>{{ book.title }}</strong><span class='subtitle isbn'>{{ book.isbn }}</span>
+	    </div>
 
         <ul>
             {% for site, price in book.prices.items() %}
@@ -99,8 +121,8 @@ nav {
         </ul>
 
 	<div class='book-buttons'>
-        <a class='btn' href="{{ url_for('edit_book', book_id=book.id) }}">Edit</a>
-        <a class='btn' href="{{ url_for('scrape_prices', book_id=book.id) }}">Refresh</a>
+        <button class='btn yellow c-black' onclick="location.href='{{ url_for('edit_book', book_id=book.id) }}'">Edit</button>
+        <button class='btn yellow c-black' onclick="location.href='{{ url_for('scrape_prices', book_id=book.id) }}'">Refresh</button>
 
         <!-- Delete Button -->
         <form action="{{ url_for('delete_book', book_id=book.id) }}" method="POST" style="display:inline;">
